<resources>
    <string name="app_name">bahceden</string>
    <string name="by_swifties">By Swifties</string>
    <string name="customer">Customer</string>
    <string name="producer">Producer</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or_continue_with">or continue with</string>
    <string name="forget_password">Forget Password?</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="data">Data</string>
    <string name="profile">Profile</string>
    <string name="sign_in">Sign In</string>
    <string name="remember_me">Remember Me?</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="filters">Filters</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="hot_sales">Hot Sales</string>
    <string name="categories">Categories</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="search_history">Search History</string>
    <string name="manage_account">Manage Account</string>
    <string name="change_location">Change Location</string>
    <string name="about_us">About Us</string>
    <string name="analytics">Analytics</string>
    <string name="see_all">See All</string>
    <string name="shop_now">SHOP NOW</string>
    <string name="cart">Cart</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="sort_by">Sort By</string>
    <string name="withdraw_earnings">Withdraw Earnings</string>
    <string name="shipping">Shipping</string>
    <string name="create_listing">Create Listing</string>
    <string-array name="analytics_spinner_1">
        <item>This Month</item>
        <item>Last Month</item>
        <item>This Year</item>
    </string-array>
    <string-array name="analytics_spinner_2">
        <item>Earnings</item>
        <item>Quantity</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="orders">Orders</string>
    <string name="add">Add</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="cvv">CVV</string>
    <string name="card_number">Card Number</string>
    <string name="name_of_the_card_holder">Name of the card holder</string>
    <string name="turkish_lira">₺%s</string>
    <string name="orderWithId">Order #%d</string>
    <string name="totalCost">Total: ₺%s</string>
    <string name="status">Status: %s</string>
    <string name="update_address">UPDATE ADDRESS</string>
    <string name="change_password_information_text">Press the button below to change your password.</string>
    <string name="change_password_button_text">change password via email</string>
    <string name="number_symbol">#%d</string>
    <string name="analytics_text">If you had made your purchases from markets instead of Bahçeden, you would have spent %d lira\'s this month.</string>
</resources>