<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".logInActivity">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBack"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:drawableTop="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/bahceden_green" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nexa_heavy"
        android:text="@string/login_to_your_account"
        android:textColor="@color/bahceden_green"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginBack" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:drawableTint="@color/darkGray"
        android:hint="@string/email"
        android:padding="12dp"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/darkGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginText" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:background="@drawable/edit_text_background"
        android:drawableStart="@drawable/ic_padlock"
        android:drawableEnd="@drawable/ic_hidden"
        android:drawablePadding="12dp"
        android:drawableTint="@color/darkGray"
        android:hint="@string/password"
        android:padding="12dp"
        android:inputType="textPassword"
        android:textColorHint="@color/darkGray"
        app:layout_constraintEnd_toEndOf="@+id/loginEmail"
        app:layout_constraintStart_toStartOf="@+id/loginEmail"
        app:layout_constraintTop_toBottomOf="@id/loginEmail" />

    <CheckBox
        android:id="@+id/loginRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:buttonTint="@color/bahceden_green"
        android:text="@string/remember_me"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/long_button_background"
        android:backgroundTint="@color/bahceden_green"
        android:fontFamily="@font/nexa_heavy"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/loginRememberMe"
        app:layout_constraintStart_toStartOf="@+id/loginRememberMe"
        app:layout_constraintTop_toBottomOf="@id/loginRememberMe" />

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textSize="16sp"
        android:fontFamily="@font/nexa_heavy"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/logIn"
        app:layout_constraintStart_toStartOf="@id/logIn"
        app:layout_constraintEnd_toEndOf="@id/logIn"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:background="@color/darkGray"
        app:layout_constraintBottom_toBottomOf="@+id/loginContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginContinue" />

    <TextView
        android:id="@+id/loginContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="26dp"
        android:padding="8dp"
        android:text="@string/or_continue_with"
        android:textColor="@color/darkGray"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/forgetPassword"
        app:layout_constraintStart_toStartOf="@+id/forgetPassword"
        app:layout_constraintTop_toBottomOf="@+id/forgetPassword" />


    <LinearLayout
        android:id="@+id/thirdParties"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginContinue">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:src="@drawable/google" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:src="@drawable/facebook" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nexa_heavy"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdParties" />

</androidx.constraintlayout.widget.ConstraintLayout>