<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerSearchActivity">

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_background"
        android:backgroundTint="@color/bahceden_foreground"
        android:fontFamily="@font/nexa_heavy"

        android:hint="@string/search"

        android:paddingStart="8dp"
        android:textColorHint="@color/darkGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/filterButtons"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/searchHistoryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchBar">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/long_button_background"
            android:backgroundTint="@color/bahceden_foreground"
            android:fontFamily="@font/nexa_heavy"
            android:text="@string/filters" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/long_button_background"
            android:backgroundTint="@color/bahceden_foreground"
            android:fontFamily="@font/nexa_heavy"
            android:text="@string/sort_by" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/long_button_background"
            android:backgroundTint="@color/bahceden_foreground"
            android:fontFamily="@font/nexa_heavy"
            android:text="Zıvır" />

    </LinearLayout>

    <TextView
        android:id="@+id/searchHistoryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:fontFamily="@font/nexa_heavy"
        android:text="@string/search_history"
        android:textColor="@color/bahceden_green"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterButtons" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchHistoryRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchHistoryText"
        app:layout_constraintVertical_bias="0" />

    <include
        android:id="@+id/bottomBar"
        layout="@layout/customer_bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="35dp"
        android:layout_height="38dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/searchBar"
        app:layout_constraintEnd_toEndOf="@+id/searchBar"
        app:layout_constraintTop_toTopOf="@+id/searchBar"
        app:srcCompat="@drawable/ic_search" />

</androidx.constraintlayout.widget.ConstraintLayout>